fix: cards align center

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -18,7 +18,6 @@
         justify-content: start;
         flex-wrap: wrap;
         margin: 5px;
-        align-items: center;
         gap: 32px;
         margin-bottom: 64px;
     }
